# flexPTP-linux

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  fragments.txt  ptp_config.cfg
.github/workflows/: cmake-compile-ubuntu.yml
Inc/: flexptp_options.h
Src/: main.c
Src/cli/: cli.c  cli.h  term_colors.h
